# BRRTRouter

./: .dockerignore  .gitignore  .ignorepreflight  .pre-commit-config.yaml  .tiltignore  AGENTS.md  BRRTRouter_BEGINNER_GUIDE.md  BRRTRouter_BLOG_POST.md  BUILDING_WITH_BRRTRouter.md  CHANGELOG.md  COMMIT_MSG.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.test  ENDPOINT_TEST_RESULTS.md  FINAL_COMMIT_SUMMARY.md  OPENAPI_3.1.0_COMPLIANCE_GAP.md  README.md  SOLIDJS_UI_COMPLETE.md  SOLIDJS_UI_INTEGRATION.md  Tiltfile  brrtrouter_pitch_deck.md  brrtrouter_solution_brief.md  brrtrouter_technical_whitepaper.md  clippy.toml  cluster.yaml  detailed_test_stability_results.json  docker-compose.yml  fix_dispatcher.py  fix_tests.py  ignored_tests_analysis.md  justfile  kind-config.yaml  nohup.out  patch_names.py  skaffold.yaml  test-api  test-api.sh  test.rs  (+2 more)
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.pre-commit-cache/: db.db
auto-research/: README.md
benches/: jwt_cache_performance.rs  metrics_contention.rs  schema_validation_hot_path.rs  throughput.rs
brrtrouter-validator-python/: .gitignore  CONTAINER_PLATFORMS.md  Cargo.toml  IMPLEMENTATION.md  README.md
brrtrouter-validator-python/src/: lib.rs  tests.rs
brrtrouter_macros/: Cargo.toml
crates/brrtrouter-tooling/: Cargo.toml
crates/brrtrouter-tooling/src/: build.rs  discovery.rs  gen.rs  lib.rs  paths.rs
crates/brrtrouter-tooling/src/ci/: mod.rs  tests.rs
crates/brrtrouter-tooling/src/discovery/: mod.rs  tests.rs
crates/brrtrouter-tooling/src/docker/: mod.rs  tests.rs
crates/brrtrouter-tooling/src/paths/: mod.rs  tests.rs
crates/brrtrouter-tooling/src/scan/: mod.rs  tests.rs
doc/: head.html  stack_size.md
dockerfiles/: Dockerfile  Dockerfile.dev  Dockerfile.dev-glibc
docs/: ARCHITECTURE.md  AUTO_BUILD_SOLUTION.md  BFF_PROXY_ANALYSIS.md  BRRTRouter_OVERVIEW.md  BRRTRouter_blog.md  BUILD_SIMPLIFICATION.md  CLIPPY_FIXES_SUMMARY.md  CONFIGMAP_APPROACH.md  CORS.md  CORS_IMPLEMENTATION_AUDIT.md  CORS_OPERATIONS.md  CROSS_COMPILE_FIX.md  CURL_TESTS_DOCKER_IMAGE.md  CURL_TESTS_FIX_COMPLETE.md  DANGLING_IMAGES_FIX.md  DECLARATIVE_INFRASTRUCTURE_AUDIT.md  DEPENDENCIES_CONFIG_GUIDE.md  DEPENDENCY_CONFIG_OPTIONS.md  DEPENDENCY_REGISTRY_USAGE.md  DEPENDENCY_SYSTEM_SUMMARY.md  DESIGN-route-auth-assurance.md  DESIGN_ANALYSIS.md  DEVELOPMENT.md  DOCKER_CLEANUP_FIX.md  DOCKER_IMAGE_SETUP.md  DOCUMENTATION.md  DOCUMENTATION_FINAL_SUMMARY.md  DOCUMENTATION_PROGRESS.md  FINAL_RAII_SUMMARY.md  FIXING_TOO_MANY_HEADERS.md  GENERATOR_IMPL_AND_DEPENDENCIES_ANALYSIS.md  GOOSE_LOAD_TESTING.md  HELPERS_AUDIT.md  HOT_RELOAD_RAII_FIX.md  IDAM_DESIGN_CORE_AND_EXTENSION.md  IDAM_GOTRUE_API_MAPPING.md  IDAM_MICROSCALER_ANALYSIS.md  K8S_DIRECTORY_STRUCTURE.md  KIND_IMAGE_LOADING_FIX.md  KIND_TROUBLESHOOTING.md  (+54 more)
examples/: PERFORMANCE_METRICS_README.md  adaptive_load_test.rs  api_load_test.rs  openapi.yaml  openapi.yaml.backup  performance_metrics_load_test.rs  simple_test.yaml
examples/pet_store/: Cargo.toml  Dockerfile  openapi.yaml
examples/pet_store/config/: config.yaml
examples/pet_store/doc/: index.html  openapi.yaml
examples/pet_store/examples/pet_store/: Cargo.toml
examples/pet_store/examples/pet_store/src/: main.rs  registry.rs
examples/pet_store/examples/pet_store/src/controllers/: add_pet.rs  admin_settings.rs  delete_user.rs  download_file.rs  get_item.rs  get_label.rs  get_matrix.rs  get_pet.rs  get_post.rs  get_user.rs  head_user.rs  list_pets.rs  list_user_posts.rs  list_users.rs  mod.rs  options_user.rs  post_item.rs  register_webhook.rs  search.rs  secure_endpoint.rs  stream_events.rs  submit_form.rs  upload_file.rs
examples/pet_store/examples/pet_store/src/handlers/: add_pet.rs  admin_settings.rs  delete_user.rs  download_file.rs  get_item.rs  get_label.rs  get_matrix.rs  get_pet.rs  get_post.rs  get_user.rs  head_user.rs  list_pets.rs  list_user_posts.rs  list_users.rs  mod.rs  options_user.rs  post_item.rs  register_webhook.rs  search.rs  secure_endpoint.rs  stream_events.rs  submit_form.rs  types.rs  upload_file.rs
examples/pet_store/src/: lib.rs  main.rs  registry.rs  typed.rs  types.rs
examples/pet_store/src/controllers/: add_pet.rs  admin_settings.rs  delete_user.rs  download_file.rs  get_item.rs  get_label.rs  get_matrix.rs  get_pet.rs  get_post.rs  get_user.rs  head_user.rs  list_pets.rs  list_user_posts.rs  list_users.rs  mod.rs  options_user.rs  post_item.rs  register_webhook.rs  search.rs  secure_endpoint.rs  stream_events.rs  submit_form.rs  upload_file.rs
examples/pet_store/src/handlers/: add_pet.rs  admin_settings.rs  delete_user.rs  download_file.rs  get_item.rs  get_label.rs  get_matrix.rs  get_pet.rs  get_post.rs  get_user.rs  head_user.rs  list_pets.rs  list_user_posts.rs  list_users.rs  mod.rs  options_user.rs  post_item.rs  register_webhook.rs  search.rs  secure_endpoint.rs  stream_events.rs  submit_form.rs  types.rs  upload_file.rs
examples/pet_store/static_site/: index.html
examples/pet_store/static_site/assets/: index-DNFbvFAK.js  index-Dtg_Po6D.css
k8s/: grafana.yaml  jaeger.yaml  local-registry-hosting.yaml  loki.yaml  observability-storage.yaml  otel-collector.yaml  petstore-deployment.yaml  petstore-pvc.yaml  petstore-service.yaml  postgres.yaml  prometheus.yaml  promtail.yaml  redis.yaml  velero-backups.yaml  velero-deployment.yaml  velero-namespace.yaml
llmwiki/: SCHEMA.md  docs-catalog.md  index.md  log.md
sample-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.ts
scripts/: README.md  build-test.sh  build_pet_store.sh  check-ports.sh  cleanup-test-containers.sh  com.brrtrouter.serve.plist  compare_metrics.py  curls.sh  debug-pod.sh  dev-setup.sh  dev-teardown.sh  ensure-jemalloc.sh  generate_benchmark_report.py  host-aware-build.sh  manage_service.py  post.lua  run_full_test_suite.py  run_goose_tests.py  test-ui.sh  test_api.py  test_openapi_spec.py  test_stability.py  test_stability_detailed.py  test_stability_results.json  (+1 more)
src/: cli.rs  (+23 more)
(+724 files in other folders)
