[package]
name = "brrtrouter"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Charles Sibbald <casibbald@gmail.com>"]
description = "A blazing-fast, OpenAPI 3.1 driven Rust request router powered by coroutines and may_minihttp."
license = "MIT OR Apache-2.0"
repository = "https://github.com/microscaler/brrtrouter"
keywords = ["router", "openapi", "a10", "coroutine", "may"]
categories = ["web-programming", "api-bindings", "asynchronous"]
readme = "README.md"
exclude = [".github/"]

[package.metadata.docs.rs]
# Enable Mermaid diagram rendering in docs.rs
rustdoc-args = ["--html-in-header", "doc/head.html"]
# Build all features for comprehensive documentation
all-features = true
# Use nightly for better documentation features
# rustc-args = ["--cfg", "docsrs"]
# Build only the library docs (not binaries)
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.40"
serde_yaml = "0.9.33"
toml = "0.9"
# Needed for simple JWT parsing in security providers
base64 = "0.22"
# Do not update to newer version
oas3 = { version = "0.20", features = ["yaml-spec"] }
anyhow = "1.0"
http = "1.0"  # Do not update to newer version, it that is not compatible with may_minihttp
may = "0.3"  # generator-rs is patched via [patch.crates-io] section at the end of this file
# Using our fork until PR #21 is merged upstream
may_minihttp = { git = "https://github.com/microscaler/may_minihttp.git", branch = "feat/configurable-max-headers" }
regex = "1.11.1"
smallvec = { version = "1.13", features = ["serde"] }  # Stack-allocated vectors for hot path (JSF: no heap in dispatch)
url = "2.5.8"
clap = { version = "4.5.54", features = ["cargo", "env", "derive"] }
askama = { version = "0.15.1", features = ["full"] }
notify = "8"
memory-stats = "1.1"  # For cross-platform memory monitoring
tikv-jemallocator = { version = "0.6", optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = ["stats"] }
minijinja = "2"

# OpenTelemetry observability (PROVEN VERSIONS from obsctl)
# CRITICAL: These versions work with otel-collector-contrib:0.93.0
# DO NOT UPDATE without testing against OTEL collector!
tracing = "0.1"
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "trace"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# gRPC dependencies for OTLP (compatible with opentelemetry 0.31)
tonic = "0.14"
prost = "0.14"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }

# Production JWT/JWKS validation and HTTP fetch (for external providers like PropelAuth)
# Note: jsonwebtoken 10.3.0 still uses rsa 0.9.10 (RUSTSEC-2023-0071) - timing sidechannel vulnerability
# No patched version available yet. Risk is mitigated by using rust_crypto feature and limiting
# exposure to trusted environments. Monitor for updates to jsonwebtoken/rsa.
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }  # rust_crypto enables RSA/EC algorithms
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "blocking"] }
urlencoding = "2.1"
ulid = "1.1"
sha2 = "0.10"
dashmap = "6.1"  # Lock-free concurrent HashMap for metrics
lru = "0.16"  # LRU cache for JWT claims to prevent memory leaks
once_cell = "1"  # Lazy static initialization for SPIFFE ID regex



[dev-dependencies]
pet_store = { path = "./examples/pet_store" }
criterion = "0.8"
# Using our own OTLP test utilities compatible with opentelemetry 0.31
flamegraph = "0.6"
tempfile = "3.24"
bollard = { version = "0.20", features = ["ssl", "chrono"] }
bytes = "1"  # For bollard body_full()
tar = "0.4"
walkdir = "2"
futures-util = "0.3"
futures = "0.3"
goose = "0.18.1"  # Load testing framework for static sites and APIs
parking_lot = "0.12"  # For RwLock in test utilities
libc = "0.2"  # For signal handling in tests (SIGINT cleanup)
tiny_http = "0.12.0"  # Lightweight HTTP server for mock JWKS endpoints in tests

[[bin]]
name = "brrtrouter-gen"
path = "src/bin/brrtrouter_gen.rs"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "jwt_cache_performance"
harness = false

[features]
default = []
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-ctl"]  # Enable jemalloc for accurate heap tracking
stack_usage = []

[workspace]
members = [
    "brrtrouter_macros",
    "examples/pet_store",
    "brrtrouter-validator-python"
]

[profile.release]
# Ensure optimized, compatible with musl when building with target=x86_64-unknown-linux-musl
lto = true
codegen-units = 1
panic = "abort"
strip = true

# =============================================================================
# LINT CONFIGURATION - JSF AV Safety Compliance
# =============================================================================
# Aligned with JSF AV C++ coding rules adapted for Rust
# See: docs/JSF/JSF_AUDIT_OPINION.md
#
# Phase 1 (current): warn on unsafe patterns to identify scope
# Phase 2 (future):  deny to enforce strict safety
# =============================================================================

[lints.rust]
# Prevent unsafe blocks in safe functions (require explicit unsafe fn)
unsafe_code = "warn"

[lints.clippy]
# =============================================================================
# PANIC PREVENTION - JSF AV Rule 208 adaptation
# =============================================================================
# Panics terminate threads unpredictably. In production hot paths,
# prefer Result<T, E> returns over panicking.
unwrap_used = "warn"          # TODO: Change to "deny" after fixing 172 instances
expect_used = "warn"          # expect() is just unwrap() with a message
panic = "warn"                # Explicit panic!() calls
unreachable = "warn"          # unreachable!() panics at runtime

# =============================================================================
# ALLOCATION DISCIPLINE - JSF AV Rule 206 adaptation
# =============================================================================
# Hot paths should minimize allocations for predictable latency
# These are informational for now - not enforced
# vec_init_then_push = "warn"   # Prefer vec![...] or with_capacity
# unnecessary_box_returns = "warn"

# =============================================================================
# ERROR HANDLING HYGIENE
# =============================================================================
# Ignoring errors can hide failures silently
let_underscore_must_use = "warn"
must_use_candidate = "warn"

# =============================================================================
# CODE QUALITY
# =============================================================================
# General code quality lints
clone_on_ref_ptr = "warn"     # Clone on &Arc/&Rc - usually a mistake
redundant_clone = "warn"      # Unnecessary clones
large_futures = "warn"        # Futures that are too large for the stack
large_stack_arrays = "warn"   # Stack arrays that may overflow

# =============================================================================
# CRATES.IO PATCHES
# =============================================================================
# Override generator-rs with our fork that fixes Rust 1.90+ macOS thread-local bug
[patch.crates-io]
generator = { git = "https://github.com/microscaler/generator-rs.git", branch = "fix/rust-1.90-thread-local-macos" }
