[package]
name = "brrtrouter"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Charles Sibbald <casibbald@gmail.com>"]
description = "A blazing-fast, OpenAPI 3.1 driven Rust request router powered by coroutines and may_minihttp."
license = "MIT OR Apache-2.0"
repository = "https://github.com/microscaler/brrtrouter"
keywords = ["router", "openapi", "a10", "coroutine", "may"]
categories = ["web-programming", "api-bindings", "asynchronous"]
readme = "README.md"
exclude = [".github/"]

[package.metadata.docs.rs]
# Enable Mermaid diagram rendering in docs.rs
rustdoc-args = ["--html-in-header", "doc/head.html"]
# Build all features for comprehensive documentation
all-features = true
# Use nightly for better documentation features
# rustc-args = ["--cfg", "docsrs"]
# Build only the library docs (not binaries)
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# OpenAPI schemas are resolved locally; disable remote retrieval and its reqwest stack.
jsonschema = { version = "0.45", default-features = false }
serde_yaml = "0.9.33"
toml = "1.1"
# Needed for simple JWT parsing in security providers
base64 = "0.22"
# Do not update to newer version
oas3 = { version = "0.21", features = ["yaml-spec"] }
anyhow = "1.0"
http = "1.0"  # Do not update to newer version, it that is not compatible with may_minihttp
may = "0.3"  # generator-rs is patched via [patch.crates-io] section at the end of this file
# Microscaler fork supplies the native client used by BFF proxy and security fetches.
may_minihttp = { git = "https://github.com/microscaler/may_minihttp.git", branch = "integration/microscaler-fork", features = ["client"] }
regex = "1.12.3"
smallvec = { version = "1.13", features = ["serde"] }  # Stack-allocated vectors for hot path (JSF: no heap in dispatch)
url = "2.5.8"
clap = { version = "4.6.0", features = ["cargo", "env", "derive"] }
askama = { version = "0.15.6", features = ["full"] }
notify = "8"
memory-stats = "1.1"  # For cross-platform memory monitoring
tikv-jemallocator = { version = "0.6", optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true, features = ["stats"] }
minijinja = "2"

# OpenTelemetry versions are coordinated with microscaler-observability. BRRTRouter delegates
# OTLP egress to that adapter, which uses gRPC/Tonic with HTTP exporters disabled.
tracing = "0.1"
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "trace"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Hexagonal OTEL adapter — OTLP tracer/logger + propagator (shared with Hauliage / Lifeguard).
# Pinned git dependency so the repo builds from a clean clone (CI, buildpacks, downstream git
# consumers). For local co-development against a sibling checkout, add a [patch] override in
# ~/Workspace/remote/microscaler/.cargo/config.toml (ancestor config, never committed) — see
# docs: OCTOPILOT-DEPENDENCY-RESOLUTION.
microscaler-observability = { git = "https://github.com/microscaler/microscaler-observability.git", rev = "9b9de6ba2e376b21219f4581262490e600e68c86" }

# gRPC dependencies for OTLP (compatible with opentelemetry 0.31)
tonic = "0.14"
prost = "0.14"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros"] }

http_legacy = { package = "http", version = "0.2" }
# Keep JWT signing and verification on RustCrypto. Sesame configures EdDSA only;
# RSA remains an explicit compatibility option and is not part of its token profile.
# The transitive rsa crate is still covered by RUSTSEC-2023-0071, but BRRTRouter
# only uses public-key verification and does not expose RSA private-key operations.
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
urlencoding = "2.1"
ulid = "1.1"
sha2 = "0.11"
dashmap = "6.1"  # Lock-free concurrent HashMap for metrics
lru = "0.16"  # LRU cache for JWT claims to prevent memory leaks
once_cell = "1"  # Lazy static initialization for SPIFFE ID regex
arc-swap = "1.7"  # Lock-free ArcSwap for Router/Dispatcher hot-path reads (PRD Phase 1)

# SIGTERM / SIGINT for Kubernetes graceful shutdown (scale-down, rollouts).
[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.3", features = ["iterator"] }

[dev-dependencies]
pet_store = { path = "./examples/pet_store" }
criterion = "0.8"
# Using our own OTLP test utilities compatible with opentelemetry 0.31
flamegraph = "0.6"
tempfile = "3.27"
bollard = { version = "0.20", features = ["ssl", "chrono"] }
bytes = "1"  # For bollard body_full()
tar = "0.4"
walkdir = "2"
futures-util = "0.3"
futures = "0.3"
# 0.18.x pins reqwest ^0.12; main (pre-0.19) uses reqwest 0.13.
goose = { git = "https://github.com/tag1consulting/goose", rev = "614f75149cab5a963a8bc26d7b62639dedfa7a2b" }
parking_lot = "0.12"  # For RwLock in test utilities
libc = "0.2"  # For signal handling in tests (SIGINT cleanup)
tiny_http = "0.12.0"  # Lightweight HTTP server for mock JWKS endpoints in tests
# Test-only exception: Docker UI scenarios use reqwest's multipart and separate connect/total
# deadlines; the async Goose load harness uses reqwest for Prometheus queries. Runtime code and
# protocol/security integration tests use may_minihttp::HttpClient + rustls.
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "blocking", "multipart"] }

[[bin]]
name = "brrtrouter-gen"
path = "src/bin/brrtrouter_gen.rs"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "jwt_cache_performance"
harness = false

[[bench]]
name = "schema_validation_hot_path"
harness = false

[features]
default = []
jemalloc = ["tikv-jemallocator", "tikv-jemalloc-ctl"]  # Enable jemalloc for accurate heap tracking
stack_usage = []

[workspace]
members = [
    "brrtrouter_macros",
    "examples/pet_store",
    "brrtrouter-validator-python",
    "crates/brrtrouter-tooling",
]

# Used by generated service `Cargo.toml` when `use_workspace_deps` is enabled (`templates/Cargo.toml.txt`).
[workspace.dependencies]
arc-swap = "1.7"

[profile.release]
# Ensure optimized, compatible with musl when building with target=x86_64-unknown-linux-musl
lto = true
codegen-units = 1
panic = "abort"
strip = true

# =============================================================================
# LINT CONFIGURATION - JSF AV Safety Compliance
# =============================================================================
# Aligned with JSF AV C++ coding rules adapted for Rust
# See: docs/JSF/JSF_AUDIT_OPINION.md
#
# Phase 1 (current): warn on unsafe patterns to identify scope
# Phase 2 (future):  deny to enforce strict safety
# =============================================================================

[lints.rust]
# Prevent unsafe blocks in safe functions (require explicit unsafe fn)
unsafe_code = "warn"

[lints.clippy]
# =============================================================================
# PANIC PREVENTION - JSF AV Rule 208 adaptation
# =============================================================================
# Panics terminate threads unpredictably. In production hot paths,
# prefer Result<T, E> returns over panicking.
unwrap_used = "warn"          # TODO: Change to "deny" after fixing 172 instances
expect_used = "warn"          # expect() is just unwrap() with a message
panic = "warn"                # Explicit panic!() calls
unreachable = "warn"          # unreachable!() panics at runtime

# =============================================================================
# ALLOCATION DISCIPLINE - JSF AV Rule 206 adaptation
# =============================================================================
# Hot paths should minimize allocations for predictable latency
# These are informational for now - not enforced
# vec_init_then_push = "warn"   # Prefer vec![...] or with_capacity
# unnecessary_box_returns = "warn"

# =============================================================================
# ERROR HANDLING HYGIENE
# =============================================================================
# Ignoring errors can hide failures silently
let_underscore_must_use = "warn"
must_use_candidate = "warn"

# =============================================================================
# CODE QUALITY
# =============================================================================
# General code quality lints
clone_on_ref_ptr = "warn"     # Clone on &Arc/&Rc - usually a mistake
redundant_clone = "warn"      # Unnecessary clones
large_futures = "warn"        # Futures that are too large for the stack
large_stack_arrays = "warn"   # Stack arrays that may overflow

# =============================================================================
# CRATES.IO PATCHES
# =============================================================================
# Override generator-rs with our fork that fixes Rust 1.90+ macOS thread-local bug
[patch.crates-io]
generator = { git = "https://github.com/microscaler/generator-rs.git", branch = "fix/rust-1.90-thread-local-macos" }
# Patch the full OTLP stack together so the adapter and host share one coherent revision.
# The revision is pinned for reproducible builds; advance it intentionally.
opentelemetry = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
opentelemetry_sdk = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
opentelemetry-otlp = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
opentelemetry-proto = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
opentelemetry-semantic-conventions = { git = "https://github.com/open-telemetry/opentelemetry-rust", rev = "965078315b58ae14725721735f1c8e2bc2d3b445" }
