[package]
name = "brrtrouter-tooling"
version = "0.1.0"
edition = "2021"
description = "BRRTRouter development tooling — codegen, build, Docker artifact management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/microscaler/BRRTRouter"

[dependencies]
anyhow = "1.0"
dirs = "6"
glob = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml_edit = "0.25"
tracing = "0.1"
walkdir = "2"
which = "7"
clap = { version = "4.6", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
