[package]
name = "pet_store"
version = "0.1.0"
edition = "2021"

[dependencies]
brrtrouter = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
http = "1.0"  # Do not update to newer version, it that is not compatible with may_minihttp
may = "0.3"
may_minihttp = "0.1"
anyhow = "1.0"
tracing = "0.1"
