[package]
name = "pet_store"
version = "0.1.0"
edition = "2021"

[features]
default = ["jemalloc"]
# Use jemalloc as the global allocator for better memory performance.
# Disable this feature if brrtrouter is already providing jemalloc via its own feature,
# or if you want to use the system allocator.
jemalloc = ["tikv-jemallocator"]

[dependencies]

brrtrouter = { path = "../.." }
brrtrouter_macros = { path = "../../brrtrouter_macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.14"
http = "1.0"  # Do not update to newer version, it that is not compatible with may_minihttp
may = "0.3"
may_minihttp = "0.1"
anyhow = "1.0"
clap = { version = "4.5.55", features = ["derive"] }
tikv-jemallocator = { version = "0.6", features = ["profiling"], optional = true }
